ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement3/input.ts.stderr
error: A 'continue' statement can only jump to a label of an enclosing iteration statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement3/input.ts:3:5
  |
3 |     continue;
  |     ^^^^^^^^^

